--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;1,400;1,700&family=Montserrat:ital,wght@0,200;0,300;0,500;1,400&family=Sacramento&display=swap');
 body {
     margin: 0;
+    text-align: center;    
+    align-items: center;
+}
+*{
     text-align: center;
-    
-    
 }
 
 h1 {
+    font-size: 4em;
     margin: 0;
     font-family: 'Sacramento', cursive;
+    color: #66BFBF;
+    line-height: 1;
+}
+
+h3{
+    color: #11999E;
+}
+
+h2{
+    color: #66BFBF;
+    font-weight: normal;
+    font-size: 30px;
 }
 
 p{
     font-family: 'Merriweather', serif;
 }
 
+a{
+    color: #11999E;
+    text-decoration: none;
+    list-style: none;
+    margin-right: 30px;
+}
+
 .main {
-    background-color: #B1B2FF;
+    background-color:#CDFCF6;
 }
 
 
@@ -32,7 +54,7 @@ p{
 .top-cloud {
     position: relative;
     margin-top: 50px;
-    left: 200px;
+    left: 300px;
     margin-bottom: 20px;
 
 }
@@ -42,13 +64,95 @@ p{
 }
 
 .explore-img{
-    height: 300px;
-    width: 300px;
+    height: 200px;
+    width: 200px;
     border-radius: 100%;
+    float: left;
+    margin-right: 30px;
 }
 
 .explore-img2{
-    height: 400px;
-    width: 400px;
+    height: 200px;
+    width: 200px;
     border-radius: 100%;
+    float: right;
+    margin-left: 30px;
+}
+
+.skill-row{
+    width: 50%;
+    margin: 100px auto;
+    text-align: left;
+    line-height: 2;
+    
+}
+
+.profile-me{
+    margin-top: 10px;
+}
+
+.about{
+    color: #40514E;
+}
+
+hr{
+    color: #EAF6F6 ;
+    width: 5%;
+    border-style: dotted;
+    border: none;
+    border-top: 5px dotted;
+}
+
+.skills{
+    font-size: 25ppx;
+    font-family: 'Merriweather', serif;
+    font-weight: normal;
+}
+
+.btn{
+    margin-bottom: 2px;
+}
+/* 
+.btn{
+    border: 2px  solid;
+    color: white;
+    background-color: #11cdd4;
+    border-radius: 10px;
+    padding: 8px;
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+}
+
+.btn:hover{
+    border: 2px  solid;
+    color: white;
+    background-color: #74d3d3;
+    border-radius: 10px;
+    padding: 8px;
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+} */
+
+.bottom-container{
+    margin-top: 2rem;
+}
+
+.footer-link{
+    margin-top: 20rem;
+    position: relative;
+    top: 2rem;
+}
+
+.copy{
+    margin-top:40px;
+    margin-bottom:0;
+    padding-bottom: 20px;
+    color: white;
+    font-weight: bold;
 }
